-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
4cc3a41819393b504adfcd351a9282dacf1681d5 (qtbase)
Not all generated html files are listed in the .qhp xml file for the doc module - this means they're also missing in the packaged offline documentation.
This includes many C++/QML module pages, making this problem quite severe.
Affected files:
./qtdbus/qtdbus-remotecontrolledcar-car-car-xml.html ./qtwinextras/qtwinextras-qmlmodule.html ./qtlocation/qtlocation-qmlmodule.html ./qtnfc/qtnfc-qmlmodule.html ./qtbluetooth/qtbluetooth-module.html ./qtwebkit/qtwebkit-module.html ./qtconcurrent/qtconcurrent-obsolete.html ./qtconcurrent/qtconcurrent.html ./qtpositioning/qtpositioning-qmlmodule.html ./qtwebchannel/qtwebchannel-qmlmodule.html ./qtwebchannel/qtwebchannel-module.html ./qtquick/qtquick-demos-samegame-content-settings-qml.html ./qtquick/qtquick-qmlmodule.html ./qtquick/qtquick-localstorage-localstorage-pro.html ./qtmultimedia/qtmultimedia-qmlmodule.html ./qtmultimedia/qtmultimedia-spectrum-3rdparty-fftreal-def-h.html ./qtqml/qtqml-module.html ./qtsensors/qtsensors-qmlmodule.html ./qtquickcontrols/qml-qtquick-controls-styles-statusbarstyle.html ./qtquickcontrols/qml-qtquick-controls-styles-toolbarstyle-members.html ./qtquickcontrols/qml-qtquick-controls-styles-toolbarstyle.html ./qtquickcontrols/qml-qtquick-controls-styles-statusbarstyle-members.html